MB-19042: Address data race with fetching file's kv_header

11:38:55 WARNING: ThreadSanitizer: data race (pid=121717)
11:38:55   Write of size 8 at 0x7d6400a12d60 by thread T4 (mutexes: write M13601):
11:38:55     #0 filemgr_set_kv_header /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/filemgr.cc:2473 (e2etest+0x0000004f4bd3)
11:38:55     #1 _fdb_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1697 (e2etest+0x0000004f9b97)
11:38:55     #2 fdb_check_file_reopen /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:2774 (e2etest+0x0000004fc5b7)
11:38:55     #3 fdb_set /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:3581 (e2etest+0x00000050313f)
11:38:55     #4 fdb_set_kv <null> (e2etest+0x0000004d2a29)
11:38:55     #5 e2e_fdb_set_person crtstuff.c (e2etest+0x0000004d0392)
11:38:55     #6 writer_thread(void*) crtstuff.c (e2etest+0x0000004c9bd2)
11:38:55
11:38:55   Previous read of size 8 at 0x7d6400a12d60 by thread T41:
11:38:55     #0 _fdb_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1691 (e2etest+0x0000004f9afa)
11:38:55     #1 fdb_check_file_reopen /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:2774 (e2etest+0x0000004fc5b7)
11:38:55     #2 fdb_set /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:3581 (e2etest+0x00000050313f)
11:38:55     #3 fdb_set_kv <null> (e2etest+0x0000004d2a29)
11:38:55     #4 e2e_fdb_set_person crtstuff.c (e2etest+0x0000004d0392)
11:38:55     #5 writer_thread(void*) crtstuff.c (e2etest+0x0000004c9bd2)

Change-Id: I7d08e187edc3fa930d90065ed6b2524f266959ab
Reviewed-on: http://review.couchbase.org/62383
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>